# wind-wiki

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: cli.rs
src/: config.rs  graph.rs  ingest.rs  init.rs  lib.rs  lint.rs  llm.rs  query.rs  rebuild.rs  wiki.rs
